# scl

./: .gitignore  README.md  RFC.md  _parser.py  pyproject.toml  test_parser.py
.github/workflows/: ci.yml
slash_command/: __init__.py
tests/: test_parser.py
