[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slash-command"
version = "0.1.0"
description = "Slash Command Language (SCL) — reference implementation"
requires-python = ">=3.11"
license = { text = "MIT" }

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "mypy", "ruff"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
files = ["slash_command"]

[tool.ruff]
target-version = "py311"
